--- a/style/main.css
+++ b/style/main.css
@@ -103,7 +103,7 @@ html, body{
   left: auto;
   z-index: 4;
   text-align: center;
-  width: 20%;
+  width: 280px;
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
